--- a/Matematikkboka 1HS - Interaktiv.ipynb
+++ b/Matematikkboka 1HS - Interaktiv.ipynb
@@ -7,48 +7,48 @@
    "source": [
     "<h1>Innholdsfortegnelse</h1>\n",
     "\n",
-    "- [0 Systemsjekk og kalender](#0-Systemsjekk-og-kalender)\n",
-    "    - [0.1 Systemsjekk](#0.1-Systemsjekk)\n",
-    "    - [0.2 Kalender](#0.2-Kalender)\n",
-    "- [1 Grunnleggende regning](#1.0-Grunnleggende-regning)\n",
-    "    - [1.1 Hoderegning](#1.1-Hoderegning)\n",
-    "    - [1.2 Multiplikasjon og divisjon](#1.2-Multiplikasjon-og-divisjon)\n",
-    "    - [1.3 Overslagsregning](#1.3-Overslagsregning)\n",
-    "    - [1.4 Brok](#1.4-Brok)\n",
-    "    - [1.5 Regne med brok](#1.5-Regne-med-brok)\n",
-    "    - [1.6 Prosent](#1.6-Prosent)\n",
-    "    - [1.7 Prosentvis endring](#1.7-Prosentvis-endring)\n",
-    "- [2 Personlig okonomi](#2-Personlig-okonomi)\n",
-    "    - [2.1 Regneark](#2.1-Regneark)\n",
-    "    - [2.2 Lonn og skatt](#2.2-Lonn-og-skatt)\n",
-    "    - [2.3 Sparing](#2.3-Sparing)\n",
-    "    - [2.4 Lan](#2.4-Lan)\n",
-    "    - [2.5 Kredittkort](#2.5-Kredittkort)\n",
-    "    - [2.6 Okonomiske valg](#2.6-Okonomiske-valg)\n",
-    "- [3 Formler og geometri](#3-Formler-og-geometri)\n",
-    "    - [3.1 Formlerregning](#3.1-Formlerregning)\n",
-    "    - [3.2 Formler og likninger](#3.2-Formler-og-likninger)\n",
-    "    - [3.3 Enheter](#3.3-Enheter)\n",
-    "    - [3.4 Forhold](#3.4-Forhold)\n",
-    "    - [3.5 Formlikhet](#3.5-Formlikhet)\n",
-    "    - [3.6 Pytagoras](#3.6-Pytagoras)\n",
-    "    - [3.7 Areal](#3.7-Areal)\n",
-    "    - [3.8 Volum og overflateareal](#3.8-Volum-og-overflateareal)\n",
-    "    - [3.9 Design og produktutvikling](#3.9-Design-og-produktutvikling)\n",
-    "- [4 Statistikk](#4-Statistikk)\n",
-    "    - [4.1 Tabeller og grafiske framstillinger](#4.1-Tabeller-og-grafiske-framstillinger)\n",
-    "    - [4.2 Soylediagrammer og sektordiagrammer](#4.2-Soylediagrammer-og-sektordiagrammer)\n",
-    "    - [4.3 Linjediagrammer](#4.3-Linjediagrammer)\n",
-    "    - [4.4 Ulike framstillinger av statistisk datamateriale](#4.4-Ulike-framstillinger-av-statistisk-datamateriale)\n",
-    "    - [4.5 Statistiske undersokelser](#4.5-Statistiske-undersokelser)\n",
-    "    - [4.6 Storre datamengder](#4.6-Større-datamengder)\n",
-    "- [5 Yrkesokonomi](#5-Yrkesokonomi)\n",
-    "    - [5.1 Inntekter og kostnader](#5.1-Inntekter-og-kostnader)\n",
-    "    - [5.2 Merverdiavgift](#5.2-Merverdiavgift)\n",
-    "    - [5.3 Priskalkyler](#5.3-Priskalkyler)\n",
-    "    - [5.4 Budsjett](#5.4-Budsjett)\n",
-    "    - [5.5 Anbud](#5.5-Anbud)\n",
-    "    - [5.6 Velferdsteknologi](#5.6-Velferdsteknologi)"
+    "- [0 Systemsjekk og kalender](#sec0-0)\n",
+    "    - [0.1 Systemsjekk](#sec0-1)\n",
+    "    - [0.2 Kalender](#sec0-2)\n",
+    "- [1 Grunnleggende regning](#sec0-3)\n",
+    "    - [1.1 Hoderegning](#sec1-1)\n",
+    "    - [1.2 Multiplikasjon og divisjon](#sec1-2)\n",
+    "    - [1.3 Overslagsregning](#sec1-3)\n",
+    "    - [1.4 Brok](#sec1-4)\n",
+    "    - [1.5 Regne med brok](#sec1-5)\n",
+    "    - [1.6 Prosent](#sec1-6)\n",
+    "    - [1.7 Prosentvis endring](#sec1-7)\n",
+    "- [2 Personlig okonomi](#sec2-0)\n",
+    "    - [2.1 Regneark](#sec2-1)\n",
+    "    - [2.2 Lonn og skatt](#sec2-2)\n",
+    "    - [2.3 Sparing](#sec2-3)\n",
+    "    - [2.4 Lan](#sec2-4)\n",
+    "    - [2.5 Kredittkort](#sec2-5)\n",
+    "    - [2.6 Okonomiske valg](#sec2-6)\n",
+    "- [3 Formler og geometri](#sec3-0)\n",
+    "    - [3.1 Formlerregning](#sec3-1)\n",
+    "    - [3.2 Formler og likninger](#sec3-2)\n",
+    "    - [3.3 Enheter](#sec3-3)\n",
+    "    - [3.4 Forhold](#sec3-4)\n",
+    "    - [3.5 Formlikhet](#sec3-5)\n",
+    "    - [3.6 Pytagoras](#sec3-6)\n",
+    "    - [3.7 Areal](#sec3-7)\n",
+    "    - [3.8 Volum og overflateareal](#sec3-8)\n",
+    "    - [3.9 Design og produktutvikling](#sec3-9)\n",
+    "- [4 Statistikk](#sec4-0)\n",
+    "    - [4.1 Tabeller og grafiske framstillinger](#sec4-1)\n",
+    "    - [4.2 Soylediagrammer og sektordiagrammer](#sec4-2)\n",
+    "    - [4.3 Linjediagrammer](#sec4-3)\n",
+    "    - [4.4 Ulike framstillinger av statistisk datamateriale](#sec4-4)\n",
+    "    - [4.5 Statistiske undersokelser](#sec4-5)\n",
+    "    - [4.6 Storre datamengder](#sec4-6)\n",
+    "- [5 Yrkesokonomi](#sec5-0)\n",
+    "    - [5.1 Inntekter og kostnader](#sec5-1)\n",
+    "    - [5.2 Merverdiavgift](#sec5-2)\n",
+    "    - [5.3 Priskalkyler](#sec5-3)\n",
+    "    - [5.4 Budsjett](#sec5-4)\n",
+    "    - [5.5 Anbud](#sec5-5)\n",
+    "    - [5.6 Velferdsteknologi](#sec5-6)"
    ]
   },
   {
@@ -56,13 +56,13 @@
    "id": "cdcc5e4e",
    "metadata": {},
    "source": [
-    "<a id='0-Systemsjekk-og-kalender'></a>\n",
+    "<a id='sec0-0'></a>\n",
     "# 0 Systemsjekk og kalender\n",
     "---\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
-    "<a href=\"#1-Grunnleggende-regning\">➡ Neste kapittel</a>"
+    "<a href=\"#sec0-3\">➡ Neste kapittel</a>"
    ]
   },
   {
@@ -72,9 +72,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 0.1 Systemsjekk\n",
-    "\n",
-    "<a id='#0.1-Systemsjekk'></a>\n",
+    "<a id='sec0-1'></a>\n",
+    "### 0.1 Systemsjekk\n",
     "\n",
     "<p><em>Sjekker hvilken Python versjon du kjører i jupyter notebook</em></p>\n",
     "\n",
@@ -99,9 +98,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 0.2 Kalender\n",
-    "\n",
-    "<a id='#0.2-Kalender'></a>\n",
+    "<a id='sec0-2'></a>\n",
+    "### 0.2 Kalender\n",
     "\n",
     "<p><em>Sjekker hvilket år, uke nr og dato det er</em></p>\n",
     "\n",
@@ -179,7 +177,7 @@
    "id": "197fcf7b",
    "metadata": {},
    "source": [
-    "<a id='1.0-Grunnleggende-regning'></a>\n",
+    "<a id='sec0-3'></a>\n",
     "# 1 Grunnleggende regning\n",
     "---\n",
     "<p><em>Tolke og bruke formler som gjelder dagligliv og yrkesliv\n",
@@ -188,7 +186,7 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
-    "<a href=\"#2-Personlig-okonomi\">➡ Neste kapittel</a>"
+    "<a href=\"#sec2-0\">➡ Neste kapittel</a>"
    ]
   },
   {
@@ -198,8 +196,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.1 Hoderegning\n",
-    "<a id='#1.1-Hoderegning'></a>\n",
+    "<a id='sec1-1'></a>\n",
+    "### 1.1 Hoderegning\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -414,8 +412,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.2 Multiplikasjon og divisjon\n",
-    "<a id='#1.2-Multiplikasjon-og-divisjon'></a>\n",
+    "<a id='sec1-2'></a>\n",
+    "### 1.2 Multiplikasjon og divisjon\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -630,8 +628,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.3 Overslagsregning\n",
-    "<a id='#1.3-Overslagsregning'></a>\n",
+    "<a id='sec1-3'></a>\n",
+    "### 1.3 Overslagsregning\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -730,8 +728,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.4 Brok\n",
-    "<a id='#1.4-Brok'></a>\n",
+    "<a id='sec1-4'></a>\n",
+    "### 1.4 Brok\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -931,8 +929,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.5 Regne med brok\n",
-    "<a id='#1.5-Regne-med-brok'></a>\n",
+    "<a id='sec1-5'></a>\n",
+    "### 1.5 Regne med brok\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -1515,8 +1513,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.6 Prosent\n",
-    "<a id='#1.6-Prosent'></a>\n",
+    "<a id='sec1-6'></a>\n",
+    "### 1.6 Prosent\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -2044,8 +2042,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 1.7 Prosentvis endring\n",
-    "<a id='#1.7-Prosentvis-endring'></a>\n",
+    "<a id='sec1-7'></a>\n",
+    "### 1.7 Prosentvis endring\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -2719,14 +2717,14 @@
    "id": "26e98f87",
    "metadata": {},
    "source": [
-    "<a id='#2-Personlig okonomi'></a>\n",
+    "<a id='sec2-0'></a>\n",
     "# 2 Personlig okonomi\n",
     "---\n",
     "<p><em>Vurdere valg knyttet til personlig økonomi og reflektere over konsekvenser av å ta opp lån og bruke kredittkort</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
-    "<a href=\"#3-Formler-og-geometri\">➡ Neste kapittel</a>"
+    "<a href=\"#sec3-0\">➡ Neste kapittel</a>"
    ]
   },
   {
@@ -2736,8 +2734,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 2.1 Regneark\n",
-    "<a id='#2.1-Regneark'></a>\n",
+    "<a id='sec2-1'></a>\n",
+    "### 2.1 Regneark\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -2814,8 +2812,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 2.2 Lonn og skatt\n",
-    "<a id='#2.2-Lonn-og-skatt'></a>\n",
+    "<a id='sec2-2'></a>\n",
+    "### 2.2 Lonn og skatt\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -3040,8 +3038,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 2.3 Sparing\n",
-    "<a id='#2.3-Sparing'></a>\n",
+    "<a id='sec2-3'></a>\n",
+    "### 2.3 Sparing\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -3231,8 +3229,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 2.4 Lan\n",
-    "<a id='#2.4-Lan'></a>\n",
+    "<a id='sec2-4'></a>\n",
+    "### 2.4 Lan\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -3702,8 +3700,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 2.5 Kredittkort\n",
-    "<a id='#2.5-Kredittkort'></a>\n",
+    "<a id='sec2-5'></a>\n",
+    "### 2.5 Kredittkort\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -3927,8 +3925,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 2.6 Okonomiske valg\n",
-    "<a id='#2.6-Okonomiske-valg'></a>\n",
+    "<a id='sec2-6'></a>\n",
+    "### 2.6 Okonomiske valg\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -4221,7 +4219,7 @@
    "id": "4ae31208",
    "metadata": {},
    "source": [
-    "<a id='#3-Formler-og-geometri'></a>\n",
+    "<a id='sec3-0'></a>\n",
     "# 3 Formler og geometri\n",
     "---\n",
     "<p><em>Tolke å bruke formler som gjelder dagligliv og yrkesliv\n",
@@ -4232,7 +4230,7 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
-    "<a href=\"#4-Statistikk\">➡ Neste kapittel</a>"
+    "<a href=\"#sec4-0\">➡ Neste kapittel</a>"
    ]
   },
   {
@@ -4242,8 +4240,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.1 Formlerregning\n",
-    "<a id='#3.1-Formelregning'></a>\n",
+    "<a id='sec3-1'></a>\n",
+    "### 3.1 Formlerregning\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -4534,8 +4532,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.2 Formler og likninger\n",
-    "<a id='#3.2-Formler-og-likninger'></a>\n",
+    "<a id='sec3-2'></a>\n",
+    "### 3.2 Formler og likninger\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -4851,8 +4849,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.3 Enheter\n",
-    "<a id='#3.3-Enheter'></a>\n",
+    "<a id='sec3-3'></a>\n",
+    "### 3.3 Enheter\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -5328,8 +5326,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.4 Forhold\n",
-    "<a id='#3.4-Forhold'></a>\n",
+    "<a id='sec3-4'></a>\n",
+    "### 3.4 Forhold\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -5507,8 +5505,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.5 Formlikhet\n",
-    "<a id='#3.5-Formlikhet'></a>\n",
+    "<a id='sec3-5'></a>\n",
+    "### 3.5 Formlikhet\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -6388,11 +6386,11 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.6 Pytagoras\n",
-    "<a id='#3.6-Pytagoras'></a>\n",
-    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
+    "<a id='sec3-6'></a>\n",
+    "### 3.6 Pytagoras\n",
+    "<p><em>Pytagora`s setning, a = katet, b = katet og c = hypotenus</em></p>\n",
     "\n",
-    "Pytagora`s setning, a = katet, b = katet og c = hypotenus: \n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
     "$$ a^2 + b^2 = c^2 $$"
    ]
@@ -6650,8 +6648,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.7 Areal\n",
-    "<a id='#3.7-Areal'></a>\n",
+    "<a id='sec3-7'></a>\n",
+    "### 3.7 Areal\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -6844,8 +6842,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.8 Volum og overflateareal\n",
-    "<a id='#3.8-Volum-og-overflateareal'></a>\n",
+    "<a id='sec3-8'></a>\n",
+    "### 3.8 Volum og overflateareal\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -7038,8 +7036,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 3.9 Design og produktutvikling\n",
-    "<a id='#3.9-Design-og-produktutvikling'></a>\n",
+    "<a id='sec3-9'></a>\n",
+    "### 3.9 Design og produktutvikling\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -8053,14 +8051,14 @@
    "id": "e44b6dda",
    "metadata": {},
    "source": [
-    "<a id='#4-Statistikk'></a>\n",
+    "<a id='sec4-0'></a>\n",
     "# 4 Statistikk\n",
     "---\n",
     "<p><em>Innhente data og behandle store datasett, gjøre beregninger og lage formålstjenlige fremstillinger av resultatene og presentere disse</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
-    "<a href=\"#5-Yrkesokonomi\">➡ Neste kapittel</a>"
+    "<a href=\"#sec5-0\">➡ Neste kapittel</a>"
    ]
   },
   {
@@ -8070,8 +8068,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 4.1 Tabeller og grafiske framstillinger\n",
-    "<a id='#4.1-Tabeller-og-grafiske-framstillinger'></a>\n",
+    "<a id='sec4-1'></a>\n",
+    "### 4.1 Tabeller og grafiske framstillinger\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -8302,8 +8300,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 4.2 Soylediagrammer og sektordiagrammer\n",
-    "<a id='#4.2-Soylediagrammer-og-sektordiagrammer'></a>\n",
+    "<a id='sec4-2'></a>\n",
+    "### 4.2 Soylediagrammer og sektordiagrammer\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -8828,8 +8826,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 4.3 Linjediagrammer\n",
-    "<a id='#4.3-Linjediagrammer'></a>\n",
+    "<a id='sec4-3'></a>\n",
+    "### 4.3 Linjediagrammer\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -9200,8 +9198,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 4.4 Ulike framstillinger av statistisk datamateriale\n",
-    "<a id='#4.4-Ulike-framstillinger-av-statistisk-datamateriale'></a>\n",
+    "<a id='sec4-4'></a>\n",
+    "### 4.4 Ulike framstillinger av statistisk datamateriale\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -9572,8 +9570,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 4.5 Statistiske undersokelser\n",
-    "<a id='#4.5-Statistiske-undersokelser'></a>\n",
+    "<a id='sec4-5'></a>\n",
+    "### 4.5 Statistiske undersokelser\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -9592,8 +9590,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 4.6 Storre datamengder\n",
-    "<a id='#4.6-Større-datamengder'></a>\n",
+    "<a id='sec4-6'></a>\n",
+    "### 4.6 Storre datamengder\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -9817,7 +9815,7 @@
    "id": "c4e4554e",
    "metadata": {},
    "source": [
-    "<a id='#5-Yrkesokonomi'></a>\n",
+    "<a id='sec5-0'></a>\n",
     "# 5 Yrkesokonomi\n",
     "---\n",
     "<p><em>Lese, bruke og lage regneark i arbeidet med budsjett, anbud og kostnadsberegning knyttet til informasjonsteknologi og medieproduksjon, og vurdere hvordan ulike faktorar påvirker resultatet</em></p>\n",
@@ -9832,8 +9830,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 5.1 Inntekter og kostnader\n",
-    "<a id='#5.1-Inntekter-og-kostnader'></a>\n",
+    "<a id='sec5-1'></a>\n",
+    "### 5.1 Inntekter og kostnader\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -9852,8 +9850,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 5.2 Merverdiavgift\n",
-    "<a id='#5.2-Merverdiavgift'></a>\n",
+    "<a id='sec5-2'></a>\n",
+    "### 5.2 Merverdiavgift\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -9948,8 +9946,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 5.3 Priskalkyler\n",
-    "<a id='#5.3-Priskalkyler'></a>\n",
+    "<a id='sec5-3'></a>\n",
+    "### 5.3 Priskalkyler\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -10197,8 +10195,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 5.4 Budsjett\n",
-    "<a id='#5.4-Budsjett'></a>\n",
+    "<a id='sec5-4'></a>\n",
+    "### 5.4 Budsjett\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -10217,8 +10215,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 5.5 Anbud\n",
-    "<a id='#5.5-Anbud'></a>\n",
+    "<a id='sec5-5'></a>\n",
+    "### 5.5 Anbud\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
@@ -10282,8 +10280,8 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 5.6 Velferdsteknologi\n",
-    "<a id='#5.6-Velferdsteknologi'></a>\n",
+    "<a id='sec5-6'></a>\n",
+    "### 5.6 Velferdsteknologi\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
