--- a/Matematikkboka 1HS - Interaktiv.ipynb
+++ b/Matematikkboka 1HS - Interaktiv.ipynb
@@ -186,6 +186,8 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
+    "<a href=\"#sec0-0\">⬅ Forrige kapittel</a>\n",
+    "\n",
     "<a href=\"#sec2-0\">➡ Neste kapittel</a>"
    ]
   },
@@ -2724,6 +2726,8 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
+    "<a href=\"#sec0-3\">⬅ Forrige kapittel</a>\n",
+    "\n",
     "<a href=\"#sec3-0\">➡ Neste kapittel</a>"
    ]
   },
@@ -4229,6 +4233,8 @@
     "Utforske og bruke geometriske former og forhold og bruke det i design og produktutvikling</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
+    "\n",
+    "<a href=\"#sec2-0\">⬅ Forrige kapittel</a>\n",
     "\n",
     "<a href=\"#sec4-0\">➡ Neste kapittel</a>"
    ]
@@ -8058,6 +8064,8 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
+    "<a href=\"#sec3-0\">⬅ Forrige kapittel</a>\n",
+    "\n",
     "<a href=\"#sec5-0\">➡ Neste kapittel</a>"
    ]
   },
@@ -9820,7 +9828,9 @@
     "---\n",
     "<p><em>Lese, bruke og lage regneark i arbeidet med budsjett, anbud og kostnadsberegning knyttet til informasjonsteknologi og medieproduksjon, og vurdere hvordan ulike faktorar påvirker resultatet</em></p>\n",
     "\n",
-    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
+    "\n",
+    "<a href=\"#sec4-0\">⬅ Forrige kapittel</a>"
    ]
   },
   {
@@ -10485,7 +10495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
