--- a/Matematikkboka 1IM - Interaktiv.ipynb
+++ b/Matematikkboka 1IM - Interaktiv.ipynb
@@ -186,6 +186,8 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
+    "<a href=\"#sec0-0\">⬅ Forrige kapittel</a>\n",
+    "\n",
     "<a href=\"#sec2-0\">➡ Neste kapittel</a>"
    ]
   },
@@ -2724,6 +2726,8 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
+    "<a href=\"#sec0-3\">⬅ Forrige kapittel</a>\n",
+    "\n",
     "<a href=\"#sec3-0\">➡ Neste kapittel</a>"
    ]
   },
@@ -3707,10 +3711,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "03db3df2-893e-46b8-a4d4-8308e96c0c7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📌 HOVEDMENY – Velg en kalkulator:\n",
+      "1: Kredittkortkalkulator (Renter fra første måned)\n",
+      "2: Generell renteberegning (Med valgfri rentefri periode)\n",
+      "q: Avslutt programmet\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Skriv tallet på valget ditt (1-2) eller 'q':  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Avslutter programmet. Ha en fin dag!\n"
+     ]
+    }
+   ],
    "source": [
     "# 2 Personlig økonomi: 2.5 Kredittkort\n",
     "import math\n",
@@ -4229,6 +4259,8 @@
     "Utforske og bruke geometriske former og forhold og bruke det i design og produktutvikling</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
+    "\n",
+    "<a href=\"#sec2-0\">⬅ Forrige kapittel</a>\n",
     "\n",
     "<a href=\"#sec4-0\">➡ Neste kapittel</a>"
    ]
@@ -8058,6 +8090,8 @@
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
+    "<a href=\"#sec3-0\">⬅ Forrige kapittel</a>\n",
+    "\n",
     "<a href=\"#sec5-0\">➡ Neste kapittel</a>"
    ]
   },
@@ -9820,7 +9854,9 @@
     "---\n",
     "<p><em>Lese, bruke og lage regneark i arbeidet med budsjett, anbud og kostnadsberegning knyttet til informasjonsteknologi og medieproduksjon, og vurdere hvordan ulike faktorar påvirker resultatet</em></p>\n",
     "\n",
-    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
+    "\n",
+    "<a href=\"#sec4-0\">⬅ Forrige kapittel</a>"
    ]
   },
   {
@@ -10485,7 +10521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
