--- a/Matematikkboka 1HS - Interaktiv.ipynb
+++ b/Matematikkboka 1HS - Interaktiv.ipynb
@@ -5,7 +5,8 @@
    "id": "5a27e243",
    "metadata": {},
    "source": [
-    "<h1>Innholdsfortegnelse</h1>\n",
+    "<a id=\"innholdsfortegnelse\"></a>\n",
+    "# Innholdsfortegnelse\n",
     "\n",
     "- [0 Systemsjekk og kalender](#sec0-0)\n",
     "    - [0.1 Systemsjekk](#sec0-1)\n",
@@ -10495,7 +10496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
