--- a/Matematikkboka 1IM - Interaktiv.ipynb
+++ b/Matematikkboka 1IM - Interaktiv.ipynb
@@ -2741,7 +2741,7 @@
     "<a id='sec2-0'></a>\n",
     "# 2 Personlig okonomi\n",
     "---\n",
-    "<p><em>Vurdere valg knyttet til personlig økonomi og reflektere over konsekvenser av å ta opp lån og bruke kredittkort</em></p>\n",
+    "<p><em>Vurdere valg knyttet til personlig økonomi og reflektere over konsekvenser av å ta opp lån og å bruke kredittkort</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
@@ -6733,9 +6733,9 @@
     "<a id='sec3-0'></a>\n",
     "# 3 Formler og geometri\n",
     "---\n",
-    "<p><em>Tolke å bruke formler som gjelder dagligliv og yrkesliv\n",
+    "<p><em>Tolke og bruke formler som gjelder dagligliv og yrkesliv\n",
     "\n",
-    "Tolke og bruke sammensatte enheter i praktiske sammenhenger og velge egnet måleenhet\n",
+    "Tolke og bruke sammensatte måleenheter i praktiske sammenhenger og velge egnet måleenhet\n",
     "\n",
     "Utforske og bruke geometriske former og forhold og bruke det i design og produktutvikling</em></p>\n",
     "\n",
@@ -10549,7 +10549,7 @@
     "<a id='sec4-0'></a>\n",
     "# 4 Statistikk\n",
     "---\n",
-    "<p><em>Innhente data og behandle store datasett, gjøre beregninger og lage formålstjenlige fremstillinger av resultatene og presentere disse</em></p>\n",
+    "<p><em>Innhente data og behandle store datasett, gjøre beregninger og lage hensiktsmessige framstillinger av resultatene og presentere disse</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
@@ -13323,7 +13323,7 @@
     "<a id='sec5-0'></a>\n",
     "# 5 Yrkesokonomi\n",
     "---\n",
-    "<p><em>Lese, bruke og lage regneark i arbeidet med budsjett, anbud og kostnadsberegning knyttet til informasjonsteknologi og medieproduksjon, og vurdere hvordan ulike faktorar påvirker resultatet</em></p>\n",
+    "<p><em>Lese, bruke og lage regneark i arbeidet med budsjett, anbud og kostnadsberegning knyttet til informasjonsteknologi og medieproduksjon, og vurdere hvordan ulike faktorer påvirker resultatet</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
