--- a/Matematikkboka 1IM - Interaktiv.ipynb
+++ b/Matematikkboka 1IM - Interaktiv.ipynb
@@ -14872,19 +14872,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ============================================================\n",
-    "# INTERAKTIVT ANBUDS-VERKTØY (Sinus 1P-Y IM) – med løsninger\n",
-    "# Python 3.14.x • Jupyter • ipywidgets\n",
-    "# ============================================================\n",
-    "# Innhold:\n",
-    "#   Tab 1: Anbud (varer + fortjeneste + arbeid + uforutsett + MVA + inntekter)\n",
-    "#          - bok-stige (+ og =), formelblokk (LaTeX), elevmodus\n",
-    "#          - vareliste eller enkeltbeløp\n",
-    "#          - eksempelmeny (Max, Rita, Guro) + fasit-sjekk (PASS/FEIL)\n",
-    "#   Tab 2: Hotell (to anbud + egenandel)\n",
-    "#   Tab 3: Diskusjon A vs B (tekststøtte)\n",
-    "# ============================================================\n",
-    "\n",
     "import re\n",
     "import math\n",
     "import pandas as pd\n",
@@ -15625,6 +15612,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ab582ba-f60d-48a7-b8e8-0aeaf2d3cda9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5 Yrkesøkonomi: 5.5 Anbud\n",
+    "def calculate_bid():\n",
+    "    while True:\n",
+    "        print(\"\\n--- Anbudsberegning ---\")\n",
+    "        avslutt = input(\"Trykk 'q' for å avslutte eller Enter for å fortsette: \")\n",
+    "        if avslutt.lower() == 'q':\n",
+    "            print(\"Programmet er avsluttet.\")\n",
+    "            break\n",
+    "\n",
+    "        try:\n",
+    "            innkjopssum_uten_mva = eval(input(\"Innkjøpssum uten mva (f.eks. 5*100): \"))\n",
+    "            fortjeneste_prosent = eval(input(\"Fortjeneste i prosent (f.eks. 80): \"))\n",
+    "            lonnskostnader = eval(input(\"Lønnskostnader (f.eks. 10*500): \"))\n",
+    "            mva_sats = eval(input(\"Merverdiavgift i prosent (f.eks. 25): \"))\n",
+    "\n",
+    "            fortjeneste = innkjopssum_uten_mva * (fortjeneste_prosent / 100)\n",
+    "            utsalgssum = innkjopssum_uten_mva + fortjeneste\n",
+    "            pris_uten_mva = utsalgssum + lonnskostnader\n",
+    "            mva_belop = pris_uten_mva * (mva_sats / 100)\n",
+    "            pris_med_mva = pris_uten_mva + mva_belop\n",
+    "            inntekt_til_bedriften = pris_uten_mva - innkjopssum_uten_mva\n",
+    "\n",
+    "            print(\"\\n--- Resultat ---\")\n",
+    "            print(f\"Utsalgssum (materialer, råvarer): {utsalgssum:.2f} kr\")\n",
+    "            print(f\"Pris uten merverdiavgift: {pris_uten_mva:.2f} kr\")\n",
+    "            print(f\"Merverdiavgift: {mva_belop:.2f} kr\")\n",
+    "            print(f\"Pris med merverdiavgift: {pris_med_mva:.2f} kr\")\n",
+    "            print(f\"Inntekten til bedriften: {inntekt_til_bedriften:.2f} kr\")\n",
+    "\n",
+    "            print(\"\\nUlemper med for lavt anbud:\")\n",
+    "            print(\"- Risiko for underskudd\")\n",
+    "            print(\"- Manglende dekning av uforutsette kostnader\")\n",
+    "            print(\"- Redusert kvalitet på arbeidet\")\n",
+    "\n",
+    "            print(\"\\nUlemper med for høyt anbud:\")\n",
+    "            print(\"- Risiko for å miste kunden\")\n",
+    "            print(\"- Redusert konkurranseevne\")\n",
+    "            print(\"- Oppfattes som overpriset\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Feil i input: {e}. Prøv igjen.\")\n",
+    "\n",
+    "# Kjør funksjonen i en celle i Jupyter Notebook\n",
+    "calculate_bid()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2a89e508-f437-43c1-9f91-17392938e0c5",
    "metadata": {
@@ -15647,24 +15687,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ============================================================\n",
-    "# VELFERDSTEKNLOGI – INTERAKTIVT VERKTØY (Sinus 1P-Y / IM)\n",
-    "# Python 3.14.x • Jupyter • ipywidgets\n",
-    "# ============================================================\n",
-    "# Innhold (Tabs):\n",
-    "#  1) Alarm/medisinpåminner (investering vs spart tid)\n",
-    "#  2) Sykefravær (timer spart + kroner spart + ev. heis-investering)\n",
-    "#  3) Videokommunikasjon (reise/leddager) – lønn spart\n",
-    "#  4) Elektronisk dørlås (timer spart, kr spart, netto 1. og 2. år, payback + tabell)\n",
-    "#  5) Dusjtoalett (timer/år, kr/år, payback måneder, maks antall for nullresultat)\n",
-    "#  6) Generell investering (investering, besparelse, netto, payback år)\n",
-    "#\n",
-    "# Standard:\n",
-    "#  - Robust input (komma/punktum, kr, %, mellomrom)\n",
-    "#  - Elevmodus + LaTeX-formler\n",
-    "#  - Eksempelmeny + fasit-sjekk (PASS/FEIL) for typiske bokeksempler\n",
-    "# ============================================================\n",
-    "\n",
     "import re\n",
     "import math\n",
     "import pandas as pd\n",
@@ -16680,6 +16702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 5 Yrkesøkonomi: 5.6 Velferdsteknologi\n",
     "STANDARD_TIMELØNN = 340\n",
     "\n",
     "def spør_om_timelønn():\n",
