--- a/Matematikkboka 1IM - Interaktiv.ipynb
+++ b/Matematikkboka 1IM - Interaktiv.ipynb
@@ -202,7 +202,9 @@
     "<a id='sec1-1'></a>\n",
     "### 1.1 Hoderegning\n",
     "\n",
-    "<p><em>Grunnleggende regning Addisjon, subtraksjon, multiplikasjon og divisjon</em></p>\n",
+    "<p><em>Grunnleggende regning Addisjon, subtraksjon, multiplikasjon og divisjon\n",
+    "\n",
+    "Gangetabell spill nederst :)</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
@@ -408,6 +410,360 @@
     "])\n",
     "\n",
     "display(ui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcc3ca0e-200b-4d3e-9a35-78415f1f096c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
+    "\n",
+    "# -----------------------------\n",
+    "#  Hjelpefunksjon: gangetabell\n",
+    "# -----------------------------\n",
+    "def bygg_gangetabell_html(n=10):\n",
+    "    rows = []\n",
+    "    header = \"<tr><th style='padding:4px;background:#eee'></th>\" + \"\".join(\n",
+    "        f\"<th style='padding:4px;background:#eee'>{j}</th>\" for j in range(1, n+1)\n",
+    "    ) + \"</tr>\"\n",
+    "    rows.append(header)\n",
+    "    for i in range(1, n+1):\n",
+    "        row = [f\"<th style='padding:4px;background:#eee'>{i}</th>\"]\n",
+    "        for j in range(1, n+1):\n",
+    "            row.append(f\"<td style='padding:4px;text-align:center'>{i*j}</td>\")\n",
+    "        rows.append(\"<tr>\" + \"\".join(row) + \"</tr>\")\n",
+    "    return \"<table style='border-collapse:collapse' border='1'>\" + \"\".join(rows) + \"</table>\"\n",
+    "\n",
+    "\n",
+    "class GangetabellSpill:\n",
+    "    \"\"\"\n",
+    "    Gangetabell-spill for Jupyter Notebook (ipywidgets).\n",
+    "    - Ingen on_submit (deprecated). Bruker observe på 'value' med commit (Enter / fokus ut).\n",
+    "    - Robust mot at vi selv tømmer inputfeltet (intern flagg).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # -----------------------------\n",
+    "        # Innstillinger\n",
+    "        # -----------------------------\n",
+    "        self.antall = widgets.Dropdown(\n",
+    "            options=[5, 10, 15, 20, 30],\n",
+    "            value=10,\n",
+    "            description=\"Antall:\",\n",
+    "            style={\"description_width\": \"70px\"},\n",
+    "            layout=widgets.Layout(width=\"200px\"),\n",
+    "        )\n",
+    "\n",
+    "        self.max_tall = widgets.IntSlider(\n",
+    "            value=10, min=5, max=20, step=1,\n",
+    "            description=\"Max:\",\n",
+    "            style={\"description_width\": \"70px\"},\n",
+    "            layout=widgets.Layout(width=\"260px\"),\n",
+    "        )\n",
+    "\n",
+    "        self.fokus = widgets.Dropdown(\n",
+    "            options=[(\"Blandet\", \"blandet\")] + [(f\"Kun {n}-gangen\", f\"kun{n}\") for n in range(1, 11)],\n",
+    "            value=\"blandet\",\n",
+    "            description=\"Fokus:\",\n",
+    "            style={\"description_width\": \"70px\"},\n",
+    "            layout=widgets.Layout(width=\"220px\"),\n",
+    "        )\n",
+    "\n",
+    "        self.gjentakelser = widgets.Checkbox(value=False, description=\"Tillat gjentakelser\")\n",
+    "        self.vis_tabell = widgets.ToggleButton(value=False, description=\"Vis gangetabell\")\n",
+    "\n",
+    "        # -----------------------------\n",
+    "        # Spill-UI\n",
+    "        # -----------------------------\n",
+    "        self.spørsmål_html = widgets.HTML(\"<h3>Trykk <b>Start</b> for å begynne 🎯</h3>\")\n",
+    "        self.feedback_html = widgets.HTML(\"\")\n",
+    "        self.status_html = widgets.HTML(\"\")\n",
+    "\n",
+    "        self.progress = widgets.IntProgress(value=0, min=0, max=self.antall.value)\n",
+    "\n",
+    "        self.svar = widgets.Text(\n",
+    "            value=\"\",\n",
+    "            placeholder=\"Skriv svaret og trykk Enter\",\n",
+    "            description=\"Svar:\",\n",
+    "            style={\"description_width\": \"70px\"},\n",
+    "            layout=widgets.Layout(width=\"240px\"),\n",
+    "        )\n",
+    "\n",
+    "        self.knapp_svar = widgets.Button(description=\"Svar\", button_style=\"primary\")\n",
+    "        self.knapp_start = widgets.Button(description=\"Start / Spill på nytt\", button_style=\"success\")\n",
+    "        self.knapp_hopp = widgets.Button(description=\"Hopp over\", button_style=\"warning\")\n",
+    "\n",
+    "        self.tabell_html = widgets.HTML(\"\")\n",
+    "\n",
+    "        self.out = widgets.Output()\n",
+    "\n",
+    "        # -----------------------------\n",
+    "        # Event-handling\n",
+    "        # -----------------------------\n",
+    "        self.knapp_start.on_click(self.start)\n",
+    "        self.knapp_svar.on_click(self.svar_knapp)\n",
+    "        self.knapp_hopp.on_click(self.hopp_over)\n",
+    "\n",
+    "        # Toggle gangetabell\n",
+    "        self.vis_tabell.observe(self._toggle_tabell, names=\"value\")\n",
+    "\n",
+    "        # OBS: on_submit er deprecated → bruk observe på value.\n",
+    "        # For noen widget-versjoner finnes continuous_update; hvis ikke, ignorer.\n",
+    "        if hasattr(self.svar, \"continuous_update\"):\n",
+    "            self.svar.continuous_update = False\n",
+    "\n",
+    "        self._intern_oppdatering = False\n",
+    "        self.svar.observe(self._on_value_commit, names=\"value\")\n",
+    "\n",
+    "        # -----------------------------\n",
+    "        # Layout\n",
+    "        # -----------------------------\n",
+    "        rad1 = widgets.HBox([self.antall, self.max_tall, self.fokus])\n",
+    "        rad2 = widgets.HBox([self.gjentakelser, self.vis_tabell, self.knapp_start])\n",
+    "        rad3 = widgets.HBox([self.svar, self.knapp_svar, self.knapp_hopp])\n",
+    "\n",
+    "        self.ui = widgets.VBox([\n",
+    "            rad1,\n",
+    "            rad2,\n",
+    "            self.spørsmål_html,\n",
+    "            self.feedback_html,\n",
+    "            self.status_html,\n",
+    "            self.progress,\n",
+    "            rad3,\n",
+    "            self.tabell_html,\n",
+    "            self.out\n",
+    "        ])\n",
+    "\n",
+    "        # -----------------------------\n",
+    "        # Spilltilstand\n",
+    "        # -----------------------------\n",
+    "        self.oppgaver = []\n",
+    "        self.i = 0\n",
+    "        self.poeng = 0\n",
+    "        self.aktiv = False\n",
+    "        self.nåværende = None\n",
+    "        self.start_tid = None\n",
+    "        self.oppgave_start = None\n",
+    "        self.logg = []\n",
+    "\n",
+    "        self._oppdater_status()\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # Intern logikk\n",
+    "    # -----------------------------\n",
+    "    def _toggle_tabell(self, change):\n",
+    "        if change[\"new\"]:\n",
+    "            self.tabell_html.value = bygg_gangetabell_html(10)\n",
+    "        else:\n",
+    "            self.tabell_html.value = \"\"\n",
+    "\n",
+    "    def _lag_oppgaver(self):\n",
+    "        m = self.max_tall.value\n",
+    "        antall = self.antall.value\n",
+    "\n",
+    "        if self.fokus.value.startswith(\"kun\"):\n",
+    "            n = int(self.fokus.value.replace(\"kun\", \"\"))\n",
+    "            alle = [(n, b) for b in range(1, m + 1)]\n",
+    "        else:\n",
+    "            alle = [(a, b) for a in range(1, m + 1) for b in range(1, m + 1)]\n",
+    "\n",
+    "        if not alle:\n",
+    "            return []\n",
+    "\n",
+    "        if self.gjentakelser.value:\n",
+    "            # Med gjentakelser: trekk tilfeldig antall ganger\n",
+    "            return [random.choice(alle) for _ in range(antall)]\n",
+    "        else:\n",
+    "            # Uten gjentakelser: bland og ta første antall (eller færre hvis ikke nok)\n",
+    "            random.shuffle(alle)\n",
+    "            return alle[:min(antall, len(alle))]\n",
+    "\n",
+    "    def _oppdater_status(self):\n",
+    "        if not self.aktiv:\n",
+    "            self.status_html.value = \"<b>Status:</b> Klar.\"\n",
+    "            self.progress.max = self.antall.value\n",
+    "            self.progress.value = 0\n",
+    "            return\n",
+    "\n",
+    "        antall = len(self.oppgaver)\n",
+    "        treff = (self.poeng / self.i * 100) if self.i > 0 else 0\n",
+    "        self.status_html.value = f\"<b>Status:</b> {self.i}/{antall} | Poeng: {self.poeng} | Treff: {treff:.0f}%\"\n",
+    "        self.progress.max = antall\n",
+    "        self.progress.value = min(self.i, antall)\n",
+    "\n",
+    "    def _sett_svarfelt(self, tekst=\"\"):\n",
+    "        # Unngå at observe-triggeren fyrer når vi selv setter value\n",
+    "        self._intern_oppdatering = True\n",
+    "        self.svar.value = tekst\n",
+    "        self._intern_oppdatering = False\n",
+    "\n",
+    "    def _vis_oppgave(self):\n",
+    "        a, b = self.oppgaver[self.i]\n",
+    "        self.nåværende = (a, b)\n",
+    "        self.oppgave_start = time.time()\n",
+    "\n",
+    "        self.feedback_html.value = \"\"\n",
+    "        self.spørsmål_html.value = f\"<h3>Spørsmål {self.i + 1} av {len(self.oppgaver)}: Hva er <b>{a} · {b}</b>?</h3>\"\n",
+    "        self._sett_svarfelt(\"\")\n",
+    "        try:\n",
+    "            self.svar.focus()\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
+    "        self._oppdater_status()\n",
+    "\n",
+    "    def _avslutt(self):\n",
+    "        total_tid = time.time() - self.start_tid if self.start_tid else None\n",
+    "        antall = len(self.oppgaver)\n",
+    "        treff = (self.poeng / antall * 100) if antall else 0\n",
+    "\n",
+    "        feil = [r for r in self.logg if not r[\"riktig\"]]\n",
+    "        feiltekst = \"\"\n",
+    "        if feil:\n",
+    "            show = feil[:10]\n",
+    "            feiltekst = \"<br>\".join([f\"• {r['a']}·{r['b']} = {r['riktig_svar']} (du svarte {r['svar']})\" for r in show])\n",
+    "            if len(feil) > 10:\n",
+    "                feiltekst += f\"<br>… (+{len(feil)-10} flere)\"\n",
+    "\n",
+    "        tidtxt = f\"<br><b>Tid:</b> {total_tid:.1f} s\" if total_tid is not None else \"\"\n",
+    "        self.spørsmål_html.value = (\n",
+    "            f\"<h3>Ferdig! 🎉</h3>\"\n",
+    "            f\"<b>Resultat:</b> {self.poeng}/{antall} ({treff:.0f}%)\"\n",
+    "            f\"{tidtxt}\"\n",
+    "            f\"{('<br><br><b>Feil:</b><br>' + feiltekst) if feiltekst else '<br><br><b>Ingen feil!</b> 🙌'}\"\n",
+    "        )\n",
+    "        self.feedback_html.value = \"<i>Logg vises under (DataFrame) – fint for dokumentasjon.</i>\"\n",
+    "        self.aktiv = False\n",
+    "        self._oppdater_status()\n",
+    "\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "            df = pd.DataFrame(self.logg)\n",
+    "            display(df)\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # Enter/commit uten on_submit\n",
+    "    # -----------------------------\n",
+    "    def _on_value_commit(self, change):\n",
+    "        # Hvis vi selv tømmer feltet → ignorer\n",
+    "        if self._intern_oppdatering:\n",
+    "            return\n",
+    "        # Hvis ikke aktivt spill → ignorer\n",
+    "        if not self.aktiv:\n",
+    "            return\n",
+    "\n",
+    "        # Når eleven \"committer\" (Enter / fokus ut), får vi ny value\n",
+    "        ny = (change.get(\"new\") or \"\").strip()\n",
+    "        if ny == \"\":\n",
+    "            return\n",
+    "\n",
+    "        # Lever svaret automatisk\n",
+    "        self.svar_knapp(None)\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # Knapper\n",
+    "    # -----------------------------\n",
+    "    def start(self, _=None):\n",
+    "        self.oppgaver = self._lag_oppgaver()\n",
+    "        self.i = 0\n",
+    "        self.poeng = 0\n",
+    "        self.logg = []\n",
+    "        self.start_tid = time.time()\n",
+    "        self.aktiv = True\n",
+    "\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "\n",
+    "        if not self.oppgaver:\n",
+    "            self.aktiv = False\n",
+    "            self.spørsmål_html.value = \"<b>Kunne ikke lage oppgaver. Sjekk innstillingene.</b>\"\n",
+    "            self._oppdater_status()\n",
+    "            return\n",
+    "\n",
+    "        self._vis_oppgave()\n",
+    "\n",
+    "    def hopp_over(self, _=None):\n",
+    "        if not self.aktiv or self.nåværende is None:\n",
+    "            return\n",
+    "\n",
+    "        a, b = self.nåværende\n",
+    "        riktig = a * b\n",
+    "        brukt = time.time() - self.oppgave_start if self.oppgave_start else None\n",
+    "\n",
+    "        self.logg.append({\n",
+    "            \"a\": a, \"b\": b,\n",
+    "            \"svar\": None,\n",
+    "            \"riktig_svar\": riktig,\n",
+    "            \"riktig\": False,\n",
+    "            \"sekunder\": round(brukt, 2) if brukt is not None else None,\n",
+    "            \"kommentar\": \"hoppet over\"\n",
+    "        })\n",
+    "\n",
+    "        self.feedback_html.value = f\"<span style='color:#c80'><b>↪ Hoppet over.</b></span> Riktig svar er <b>{riktig}</b>.\"\n",
+    "        self.i += 1\n",
+    "\n",
+    "        if self.i >= len(self.oppgaver):\n",
+    "            self._avslutt()\n",
+    "        else:\n",
+    "            self._vis_oppgave()\n",
+    "\n",
+    "    def svar_knapp(self, _=None):\n",
+    "        if not self.aktiv or self.nåværende is None:\n",
+    "            self.feedback_html.value = \"<span style='color:#c00'><b>Trykk Start først.</b></span>\"\n",
+    "            return\n",
+    "\n",
+    "        txt = self.svar.value.strip()\n",
+    "        if txt == \"\":\n",
+    "            self.feedback_html.value = \"<span style='color:#c00'><b>Skriv et svar først 😊</b></span>\"\n",
+    "            return\n",
+    "\n",
+    "        try:\n",
+    "            elevsvar = int(txt)\n",
+    "        except ValueError:\n",
+    "            self.feedback_html.value = \"<span style='color:#c00'><b>Skriv et heltall (f.eks. 42).</b></span>\"\n",
+    "            return\n",
+    "\n",
+    "        a, b = self.nåværende\n",
+    "        riktig = a * b\n",
+    "        brukt = time.time() - self.oppgave_start if self.oppgave_start else None\n",
+    "        korrekt = (elevsvar == riktig)\n",
+    "\n",
+    "        if korrekt:\n",
+    "            self.poeng += 1\n",
+    "            self.feedback_html.value = \"<span style='color:#0a0'><b>✅ Riktig!</b></span>\"\n",
+    "        else:\n",
+    "            self.feedback_html.value = f\"<span style='color:#c00'><b>❌ Galt.</b></span> Riktig svar er <b>{riktig}</b>.\"\n",
+    "\n",
+    "        self.logg.append({\n",
+    "            \"a\": a, \"b\": b,\n",
+    "            \"svar\": elevsvar,\n",
+    "            \"riktig_svar\": riktig,\n",
+    "            \"riktig\": bool(korrekt),\n",
+    "            \"sekunder\": round(brukt, 2) if brukt is not None else None,\n",
+    "            \"kommentar\": \"\"\n",
+    "        })\n",
+    "\n",
+    "        self.i += 1\n",
+    "        self._sett_svarfelt(\"\")\n",
+    "\n",
+    "        if self.i >= len(self.oppgaver):\n",
+    "            self._avslutt()\n",
+    "        else:\n",
+    "            self._vis_oppgave()\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Start: vis spillet\n",
+    "# -----------------------------\n",
+    "spill = GangetabellSpill()\n",
+    "display(spill.ui)"
    ]
   },
   {
